--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,7 @@
 	  <%= csrf_meta_tags %>
 	</head>
 	<body>
-		<%= link_to "Welcome", "/" %>
+		<%= link_to "Home", "/" %>
 		<%= link_to "About", "/about" %>
 
 		<%= yield %>
