--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,16 +2,36 @@
 
 <html>
 	<head>
-	  <title>Crumblr</title>
-	  <%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
-	  <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
-	  <%= csrf_meta_tags %>
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css">
+	  	<title>Crumblr</title>
+		  <%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
+		  <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
+		  <%= csrf_meta_tags %>
 	</head>
 	<body>
-		<%= link_to "Home", "/" %>
-		<%= link_to "About", "/about" %>
+		<div class="container">
+			<div class="page-header">
+			<ul class="nav nav-pills pull-right">
+				<li>
+					<%= link_to "Home", "/" %>
+				</li>
+				<li>
+					<%= link_to "About", "/about" %>
+				</li>
+			</ul>
 
-		<%= yield %>
+				<h1>
+					<%= link_to "crumblr", "/" %>
+					<small>// home baked goodness</small>
+				</h1>
+			</div>
+
+			<div class="row">
+				<div class="col-md-6 col-md-offset-3">
+					<%= yield %>
+				</div>
+			</div>
+		</div>
 
 	</body>
 
