Styled the Posts scaffolding to use Bootstrap

--- a/app/views/pages/welcome.html.erb
+++ b/app/views/pages/welcome.html.erb
@@ -1,6 +1,5 @@
-<h1>Welcome</h1>
-<p>
-	This is the landing page for Crumblr, a baking blog made using Ruby on Rails.
-</p>
-<p>
-	This page is just a placeholder. Later on, we'll replace it with the posts in our blog.
+<% @posts.each do |post| %>
+		<%= render 'posts/post', post: post %>
+
+	<br><br><br><br>
+<% end %>
