--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -16,6 +16,10 @@
     <%= f.text_field :title, class: "form-control" %>
   </div>
   <div class="form-group">
+    <%= f.label :kind %><br>
+    <%= f.select :kind, ["text", "image"], {}, class: "form-control" %>
+  </div>
+  <div class="form-group">
     <%= f.label :content %><br>
     <%= f.text_area :content, class: "form-control" %>
   </div>
