--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -3,10 +3,14 @@
 </p>
 
 <p>
-	<%= simple_format post.content %>
+	<% if post.kind == "image" %>
+		<%= image_tag post.content, style: "width: 100%" %>
+	<% else %>
+		<%= simple_format post.content %>
+	<% end %>
 </p>
 
-<p>
+<p class="text-muted">
 	<small>
 		Posted on <%= post.created_at.to_formatted_s(:long) %>
 	</small>
